fixed outer alignment/size + responsiveness for all major sections up to width<=1008

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -151,11 +151,11 @@ li {
 		width: 68px;
 		flex: 1 0 auto;
 		//align-items: center;
-
 	}
 
 	@media screen and (1008px<=width) {
 		width: 88px;
+		flex:1 0 auto;
 	}
 	@media screen and (1025px<=width) {
 		width: 96.5px;
@@ -193,7 +193,6 @@ li {
 		flex: 1 0 auto;
 		box-sizing: content-box;
 	}
-
 
 	@media screen and (1008px<=width) {
 		width: 88px;
@@ -279,6 +278,23 @@ li {
 
 		@media only screen and (500px<=width) {
 			margin-top: 0;
+		}
+	}
+
+	&_li--search-icon {
+		@extend .nav_li;
+
+		@media only screen and (988px<=width) {
+			display: none;
+		}
+	}
+
+	&_li--hashtag-icon {
+		@extend .nav_li;
+		display: none;
+
+		@media only screen and (988px<=width) {
+			display: flex;
 		}
 	}
 
@@ -530,7 +546,7 @@ button:hover {
 			font-size: 20px;
 			margin-left: 16px;
 			font-weight: bold;
-			color:#0F1419;
+			color: #0f1419;
 		}
 	}
 	&_profile-picture {
@@ -687,7 +703,6 @@ button:hover {
 	&_profile-image-box {
 		height: 100%;
 		margin: 0 14px 0 16px;
-
 	}
 
 	&_profile-img {
